--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,10 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pydantic (>=2.12.5,<3.0.0)",
-    "tenacity (>=9.1.2,<10.0.0)"
+    "tenacity (>=9.1.2,<10.0.0)",
+    "flatten-json (>=0.1.14,<0.2.0)"
 ]
-
+package-mode = "false"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -20,5 +21,6 @@ build-backend = "poetry.core.masonry.api"
 
 [dependency-groups]
 dev = [
-    "pytest (>=9.0.2,<10.0.0)"
+    "pytest (>=9.0.2,<10.0.0)",
+    "black (>=25.12.0,<26.0.0)"
 ]
