--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dev = [
 # ignore specific names so they won’t be reported as unused
 ignore-names = [
   "arbitrary_types_allowed",
+    "extra",
     "setUp",
     "Config"
 ]
